TestConcMarkCycleWB.java updated with logging